k8s/trends-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trends-engine-deployment
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: trends-engine
  template:
    metadata:
      labels:
        app: trends-engine
    spec:
      containers:
      - name: trends-engine
        image: tzachioy/twitterinsightservice1-trends-engine-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80 # specifies which port the container within the Pod is listening on. This does not expose the port outside of the cluster or even outside of the Pod; it merely indicates to Kubernetes and to anyone reading the manifest which port the application inside the container is configured to listen on.
