k8s/trends-engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trends-engine-service
spec:
  type: ClusterIP  # Default type, makes the service only reachable within the cluste
  selector:
    app: trends-engine
  ports:
  - port: 5001 # The port the service listens on
    targetPort: 80 # The port on the pod to forward traffic to - should be equal to what define on flask
